--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
+  min-height: 100vh;
+  width: 100%;
+}
+
+body {
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
